# src/controllers/onboarding.controller.ts
@@ -17,6 +17,9 @@ const handle = (fn: () => Promise<unknown>, res: Response, next: NextFunction, s
 export const agreementTemplates = (_req: Request, res: Response, next: NextFunction) =>
     handle(() => onboardingService.getAgreementTemplates(), res, next);
 
+export const organizationOptions = (req: Request, res: Response, next: NextFunction) =>
+    handle(() => onboardingService.getOrganizationOptions(req.userAuth!), res, next);
+
 export const create = (req: Request, res: Response, next: NextFunction) =>
     handle(
         () =>
@@ -24,6 +27,7 @@ export const create = (req: Request, res: Response, next: NextFunction) =>
                 req.userAuth!,
                 req.body.agreementTemplateId,
                 req.body.joinLinkId,
+                (req.body.answers || {}) as OnboardingAnswers,
             ),
         res,
         next,
